deploy/ray/rayDashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: ray-head-svc
  namespace: dani
spec:
  type: ClusterIP
  selector:
    ray.io/node-type: head
    ray.io/cluster: ray-cluster
  ports:
    - name: gcs
      port: 6379
      targetPort: 6379
    - name: client
      port: 10001
      targetPort: 10001
    - name: dashboard
      port: 8265
      targetPort: 8265
